src/test/ui/span/issue28498-reject-lifetime-param.stderr
error: `last_dropped` does not live long enough
  --> $DIR/issue28498-reject-lifetime-param.rs:46:1
   |
42 |     foo0 = Foo(0, &last_dropped);
   |                    ------------ borrow occurs here
...
46 | }
   | ^ `last_dropped` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error: `first_dropped` does not live long enough
  --> $DIR/issue28498-reject-lifetime-param.rs:46:1
   |
43 |     foo1 = Foo(1, &first_dropped);
   |                    ------------- borrow occurs here
...
46 | }
   | ^ `first_dropped` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error: aborting due to 2 previous errors

